--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <br><br><br>
 
     <div class="genres">
-        <div class="action-genre">
+        <div class="action-genre reveal fade-left">
             <video id="my-video1" src="./Data/genvid/vid1.mp4" muted loop></video>
             <div class="genre-content">
                 <h1>ACTION</h1>
@@ -72,7 +72,7 @@
 
         <br><br>
 
-        <div class="action-genre1">
+        <div class="action-genre1 reveal fade-right">
             <div class="genre-content">
                 <h1>COMEDY</h1>
                 <p>A genre that aims to entertain and provoke laughter through humorous situations, witty dialogue, and comedic performances. Comedy films can range from slapstick and farce to satire and dark humor, providing a lighthearted escape and often offering social commentary.   </p>
@@ -82,7 +82,7 @@
 
         <br><br>
 
-        <div class="action-genre">
+        <div class="action-genre reveal fade-left">
             <video id="my-video3" src="./Data/genvid/DraGEN.mp4" muted loop></video>
             <div class="genre-content">
                 <h1>DRAMA</h1>
@@ -92,7 +92,7 @@
 
         <br><br>
 
-        <div class="action-genre1">
+        <div class="action-genre1 reveal fade-right">
             <div class="genre-content">
                 <h1>HORROR</h1>
                 <p>A genre featuring high-energy, physical stunts and fast-paced sequences. These films often involve a hero or protagonist fighting against a villain or antagonist, and can include elements of adventure, espionage, or martial arts.</p>
@@ -102,7 +102,7 @@
 
         <br><br>
 
-        <div class="action-genre">
+        <div class="action-genre reveal fade-left">
             <video id="my-video5" src="./Data/genvid/PsyGEN.mp4" muted loop></video>
             <div class="genre-content">
                 <h1>CRIME</h1>
@@ -112,7 +112,7 @@
 
         <br><br>
 
-        <div class="action-genre1">
+        <div class="action-genre1 reveal fade-right">
             <div class="genre-content">
                 <h1>ROMANCE</h1>
                 A genre that focuses on romantic relationships and the emotions that come with them, often featuring themes of love and heartbreak. These films can range from light-hearted comedies to intense dramas, and can include elements of music, dance, or other forms of expression. Romance films can be highly emotive and romantic, with a focus on exploring the complexities of love and relationships.
@@ -122,7 +122,7 @@
 
         <br><br>
 
-        <div class="action-genre">
+        <div class="action-genre reveal fade-left">
             <video id="my-video7" src="./Data/genvid/SciGEN.mp4" muted loop></video>
             <div class="genre-content">
                 <h1>SCI-FI</h1>
@@ -132,7 +132,7 @@
 
         <br><br>
 
-        <div class="action-genre1">
+        <div class="action-genre1 reveal fade-right">
             <div class="genre-content">
                 <h1>THRILLER</h1>
                 <p>A genre that keeps audiences on the edge of their seats, typically involving suspenseful plot twists and danger. These films often involve a hero or protagonist trying to outsmart a villain or antagonist, and can include elements of mystery, espionage, or action. Thriller films can be highly engaging and gripping, with a focus on tension and suspense.</p>
