--- a/randompick.html
+++ b/randompick.html
@@ -16,7 +16,7 @@
 <body>
     <div class="topbar">
         <div class="logo">
-        <a href="#" class="logosite">
+        <a href="index.html#" class="logosite">
         <img src="./Data/logo/LogoStreamMixx.png" alt="sitelogo" class="logosite">
         <div class="streamixx">Streamixx</div></a>
         
