Random genre page added

--- a/randomgenre.html
+++ b/randomgenre.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Streamixx | Random Movie</title>
+    <link rel="stylesheet" href="stylepick.css">
+    <link rel="icon" type="image/x-icon" href="./Data/logo/LogoStreamMixx.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <script defer src="./Data/videoscript/scriptpick.js"></script>
 </head>
 <body>
-    
+    <div class="topbar">
+        <div class="logo">
+        <a href="index.html#" class="logosite">
+        <img src="./Data/logo/LogoStreamMixx.png" alt="sitelogo" class="logosite">
+        <div class="streamixx">Streamixx</div></a>
+        
+        </div>
+        <div class="top">
+        <div class="navbar">
+            <div class="home"><a href="index.html#">Home</a></div>
+            <div class="about"><a href="index.html#abse">About</a></div>
+            <div class="contact"><a href="index.html#contactus">Contact</a></div>
+        </div>
+        </div>
+        </div>
 </body>
 </html>
