--- a/randomgenre.html
+++ b/randomgenre.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streamixx | Random Movie</title>
-    <link rel="stylesheet" href="stylepick.css">
+    <link rel="stylesheet" href="./stylerandomgenre.css">
     <link rel="icon" type="image/x-icon" href="./Data/logo/LogoStreamMixx.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <script defer src="./Data/videoscript/scriptpick.js"></script>
+    <script defer src="./Data/videoscript/scriptrandomgenre.js"></script>
 </head>
 <body>
     <div class="topbar">
@@ -28,6 +28,18 @@
             <div class="contact"><a href="index.html#contactus">Contact</a></div>
         </div>
         </div>
+    </div>
+
+
+    <div class="moviecontainer">
+        <div class="heading">You have Got</div>
+        <div class="genreselected"></div>
+        <div class="buttons-genre">
+        <div class="buttons"><a><button id="rdngenrepick" type="button"></a><span>Pick a Random Movie From this Genre</span></button>
+        <div class="buttons"><a><button id="rdngenrepick" type="button"></a><span>Provide a List of Movies</span></button>
         </div>
+    </div>
+
+
 </body>
 </html>
