random movie picker done

--- a/randompick.html
+++ b/randompick.html
@@ -29,5 +29,11 @@
         </div>
         </div>
         </div>
+
+
+        <div class="moviecontainer">
+            <div class="heading">You have Got</div>
+            <div class="genreselected"></div>
+        </div>
 </body>
 </html>
