ALL JS codes added

--- a/randomgenre.html
+++ b/randomgenre.html
@@ -35,10 +35,17 @@
         <div class="heading">You have Got</div>
         <div class="genreselected"></div>
         <div class="buttons-genre">
-        <div class="buttons"><a><button id="rdngenrepick" type="button"></a><span>Pick a Random Movie From this Genre</span></button>
-        <div class="buttons"><a><button id="rdngenrepick" type="button"></a><span>Provide a List of Movies</span></button>
+        <div class="buttons"><button id="rdngenrepick" type="button" onclick="dothis()"><span>Pick a Random Movie From this Genre</span></button>
+        <div class="buttons"><button id="rdngenrepick" type="button" onclick="nowdothis()"><span>Provide a List of Movies</span></button>
         </div>
     </div>
+
+    <div class="another">
+        <div class="heading">You Got</div>
+        <div class="got-this-movie"></div>
+    </div>
+
+    <ol class="listofgenremovies"></ol>
 
 
 </body>
