Mutiple Genre Functionality Added

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <div id="dropdown-content">
         <a href="randompick.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick any Random Movie</span></button></a>
         <a href="randomgenre.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick a Random Genre</span></button></a>
+        <a href="selectingmultiplegenre.html" target="_blank"><button class="umm" id="rdnpick" type="button"><span>Pick Multiple Genres</span></button></a>
     </div>
     </div>
     </div>
