a little change again

--- a/selectingmultiplegenre.html
+++ b/selectingmultiplegenre.html
@@ -43,7 +43,7 @@
   
   <br>
   
-  <button id="merge-button">Merge Selected Arrays</button>
+  <button id="merge-button">Get the List</button>
 
   <div class="moviecontainer">
     <div class="heading">You have Got</div>
