multiple genre responsiveness done

--- a/selectingmultiplegenre.html
+++ b/selectingmultiplegenre.html
@@ -29,6 +29,10 @@
     </div>
     </div>
     </div>
+
+    <div class="headline">
+  <h1>Select Your Type</h1>
+  </div>
     
   <div id="button-container">
     <button id="button1">Action</button>
@@ -43,7 +47,9 @@
   
   <br>
   
+  <div class="merge-button">
   <button id="merge-button">Get the List</button>
+  </div>
 
   <div class="moviecontainer">
     <div class="heading">You have Got</div>
