--- a/randomgenre.html
+++ b/randomgenre.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streamixx | Random Movie</title>
-    <link rel="stylesheet" href="./stylerandomgenre.css">
+    <link rel="stylesheet" href="stylerandomgenre.css">
     <link rel="icon" type="image/x-icon" href="./Data/logo/LogoStreamMixx.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
