--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div class="top">
     <div class="navbar">
         <div class="home"><a href="#">Home</a></div>
-        <div class="about"><a href="#abse">About</a></div>
-        <div class="contact"><a href="#contactus">Contact</a></div>
+        <div class="about"><a href="#abse">About Us</a></div>
+        <div class="contact"><a href="#contactus">Contact Us</a></div>
     </div>
     </div>
     </div>
