added a footer section

--- a/index.html
+++ b/index.html
@@ -205,7 +205,24 @@
             <div class="feedimage"></div>
         </div>
     </div>
-
+<!-- Footer Section -->
+<footer class="footer">
+    <div class="footer-content">
+        <div class="footer-links">
+            <a href="index.html#">Home</a>
+            <a href="index.html#abse">About</a>
+            <a href="index.html#contactus">Contact</a>
+        </div>
+        <div class="social-links">
+            <a href="#"><img src="./Data/social-icons/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="./Data/social-icons/twitter.png" alt="Twitter"></a>
+            <a href="#"><img src="./Data/social-icons/instagram.png" alt="Instagram"></a>
+        </div>
+    </div>
+    <div class="copyright">
+        &copy; 2023 Streamixx. All rights reserved.
+    </div>
+</footer>
     <a href="#"><div class="topicon"></div></a>
 
     <script defer src="./Data/filmdata/script2.js"></script>
