--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <script defer src="./Data/videoscript/script.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 
 <body>
@@ -173,7 +175,79 @@
             <video id="my-video8" src="./Data/genvid/ThrGEN.mp4" muted loop></video>
         </div>
     </div>
-
+    <br>
+    <main class="main1">
+        <div class="imdbtop">
+            <h1>Top 5 on <span>IMDB</span> this week</h1>
+        </div>
+        <div class="imdb_cards">
+            <div class="cards" id="card-1">
+                <img src="./Data/Top-5 IMDB/Tiger_3_poster.png" alt="">
+                <div class="rating" id="r-1">
+                    <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
+                        <div class="ratingnum"><p>9.6</p></div>
+                    </div>
+                    <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
+                    </div>
+                </div>
+                <h2>1. Tiger 3</h2>
+                <div class="watchbtn"><button>Watch Options</button></div>
+                <div class="trailerbtn"><button><ion-icon name="play"></ion-icon>Trailer</button></div>
+            </div>
+            <div class="cards" id="card-2">
+                <img src="./Data/Top-5 IMDB/RRR_poster.png" alt="">
+                <div class="rating" id="r-1">
+                    <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
+                        <div class="ratingnum"><p>9.5</p></div>
+                    </div>
+                    <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
+                    </div>
+                </div>
+                <h2>2. RRR</h2>
+                <div class="watchbtn"><button>Watch Options</button></div>
+                <div class="trailerbtn"><button><ion-icon name="play"></ion-icon>Trailer</button></div>
+            </div>
+            <div class="cards" id="card-3">
+                <img src="./Data/Top-5 IMDB/The_Archies.png" alt="">
+                <div class="rating" id="r-1">
+                    <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
+                        <div class="ratingnum"><p>9.2</p></div>
+                    </div>
+                    <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
+                    </div>
+                </div>
+                <h2>3. The Archies</h2>
+                <div class="watchbtn"><button>Watch Options</button></div>
+                <div class="trailerbtn"><button><ion-icon name="play"></ion-icon>Trailer</button></div>
+            </div>
+            <div class="cards" id="card-4">
+                <img src="./Data/Top-5 IMDB/sam_bahadur_poster.png" alt="">
+                <div class="rating" id="r-1">
+                    <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
+                        <div class="ratingnum"><p>9.2</p></div>
+                    </div>
+                    <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
+                    </div>
+                </div>
+                <h2>4. Sam Bahadur</h2>
+                <div class="watchbtn"><button>Watch Options</button></div>
+                <div class="trailerbtn"><button><ion-icon name="play"></ion-icon>Trailer</button></div>
+            </div>
+            <div class="cards" id="card-5">
+                <img src="./Data/Top-5 IMDB/Oppenheimer_poster.png" alt="">
+                <div class="rating" id="r-1">
+                    <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
+                        <div class="ratingnum"><p>9.0</p></div>
+                    </div>
+                    <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
+                    </div>
+                </div>
+                <h2>5. Oppenheimer</h2>
+                <div class="watchbtn"><button>Watch Options</button></div>
+                <div class="trailerbtn"><button><ion-icon name="play"></ion-icon>Trailer</button></div>
+            </div>
+        </div>
+    </main>
     <br><br><br>
 
     <div class="aboutsection" id="abse">
