Added animations in the feature: Top 5 IMdb Rating section

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                     </div>
                 </div>
                 <h2>1. Tiger 3</h2>
-                <div class="watchbtn"><button>Watch Options</button></div>
+                <div class="watchbtn"><button><span>Watch Options</span></button></div>
                 <div class="trailerbtn"><button><ion-icon name="play"></ion-icon>Trailer</button></div>
             </div>
             <div class="cards" id="card-2">
