some changes in imdb top 5 section

--- a/index.html
+++ b/index.html
@@ -185,7 +185,9 @@
                 <img src="./Data/Top-5 IMDB/Tiger_3_poster.png" alt="">
                 <div class="rating" id="r-1">
                     <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
-                        <div class="ratingnum"><p>9.6</p></div>
+                        <div class="ratingnum">
+                            <p>9.6</p>
+                        </div>
                     </div>
                     <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
                     </div>
@@ -198,7 +200,9 @@
                 <img src="./Data/Top-5 IMDB/RRR_poster.png" alt="">
                 <div class="rating" id="r-1">
                     <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
-                        <div class="ratingnum"><p>9.5</p></div>
+                        <div class="ratingnum">
+                            <p>9.5</p>
+                        </div>
                     </div>
                     <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
                     </div>
@@ -211,7 +215,9 @@
                 <img src="./Data/Top-5 IMDB/The_Archies.png" alt="">
                 <div class="rating" id="r-1">
                     <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
-                        <div class="ratingnum"><p>9.2</p></div>
+                        <div class="ratingnum">
+                            <p>9.2</p>
+                        </div>
                     </div>
                     <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
                     </div>
@@ -224,7 +230,9 @@
                 <img src="./Data/Top-5 IMDB/sam_bahadur_poster.png" alt="">
                 <div class="rating" id="r-1">
                     <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
-                        <div class="ratingnum"><p>9.2</p></div>
+                        <div class="ratingnum">
+                            <p>9.2</p>
+                        </div>
                     </div>
                     <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
                     </div>
@@ -237,7 +245,9 @@
                 <img src="./Data/Top-5 IMDB/Oppenheimer_poster.png" alt="">
                 <div class="rating" id="r-1">
                     <div class="left"><ion-icon name="star" id="totalrating"></ion-icon>
-                        <div class="ratingnum"><p>9.0</p></div>
+                        <div class="ratingnum">
+                            <p>9.0</p>
+                        </div>
                     </div>
                     <div class="right"><ion-icon name="star-outline" id="ratehere"></ion-icon>
                     </div>
@@ -248,40 +258,6 @@
             </div>
         </div>
     </main>
-    <br><br><br>
-
-    <div class="aboutsection" id="abse">
-        <div class="aboutline">
-            About Us
-        </div>
-        <div class="aboutuscontainer">
-            <div class="nameaboutcontainer">
-                <div class="harshits">
-                    <div class="harshitsingla"></div>Harshit Singla
-                    <div class="iconstore1">
-                        <a href="https://www.instagram.com/harshit_singla1761/">
-                            <div class="instac"></div>
-                        </a>
-                        <a href="https://www.linkedin.com/in/harshit-singla-05b782244/" title="linkedin"
-                            target="_blank">
-                            <div class="linkedinc"></div>
-                        </a>
-                    </div>
-                </div>
-                <div class="harshpreets">
-                    <div class="harshpreetsingh"></div>Harshpreet Singh
-                    <div class="iconstore3">
-                        <a href="https://www.instagram.com/harshpreet0402/">
-                            <div class="instac"></div>
-                        </a>
-                        <a href="https://www.linkedin.com/in/harshpreetsingh931/">
-                            <div class="linkedinc"></div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <br><br><br>
 
