Added placeholder message
Added placeholder messages in contact us form of home page

--- a/index.html
+++ b/index.html
@@ -272,23 +272,23 @@
                 <div class="name">
                     <div class="first-name">
                         <label for="fn" class="formitem">First Name</label>
-                        <input id="fn" name="First-name" class="inputbox" required>
+                        <input id="fn"  placeholder="First Name"  name="First-name" class="inputbox" required>
                     </div>
 
                     <div class="last-name">
                         <label for="ln" class="formitem">Last Name</label>
-                        <input id="ln" name="Last-Name" class="inputbox" required>
+                        <input id="ln" placeholder="Last Name"   name="Last-Name" class="inputbox" required>
                     </div>
                 </div>
 
                 <div class="email-class">
                     <label for="mailclas" class="formitem">Email</label>
-                    <input class="inputbox" id="mailclas" name="Email" type="email" required>
+                    <input class="inputbox"   placeholder="xyz@gmail.com"   id="mailclas" name="Email" type="email" required>
                 </div>
 
                 <div class="message">
                     <label for="mesa" class="formitem">Feedback</label>
-                    <input id="mesa" class="inputbox">
+                    <input id="mesa"  placeholder="Your comments"   class="inputbox">
                 </div>
 
                 <div>
