--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
     <div id="nav-bar">
+        <div id="menu-icon-container" onclick="openSideNav()">
+            <img src="./Data/navbar/menu-icon.png" alt="menu-icon" id="menu-icon"/>
+        </div>
         <div id="logo-container">
             <a href="#" class="logosite">
                 <img src="./Data/logo/LogoStreamMixx.png" alt="Streamixx Logo" id="logo">
@@ -40,6 +43,16 @@
             <img src="./Data/navbar/bookmark-icon.png" alt="bookmark-icon" id="bookmark-icon"/>
             <button class="sign-in">Sign In</button>
         </div>
+    </div>
+
+    <div id="overlay-nav" class="side-nav">
+        <div id="side-nav-close">
+            <img src="./Data/navbar/close-icon.png" alt="close-icon" id="close-icon" onclick="closeSideNav()"/>
+        </div>
+        <a href="#" onclick="closeSideNav()">Home</a>
+        <a href="#abse" onclick="closeSideNav()">About Us</a>
+        <a href="#contactus" onclick="closeSideNav()">Contact Us</a>
+        <a href="#" onclick="closeSideNav()">Sign In</a>
     </div>
 
     <div class="welcomepage">
