some changes in navbar section

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div id="menu-container" class="nav-section navbar">
             <div class="home"><a href="#">Home</a></div>
-            <div class="about"><a href="#abse">About Us</a></div>
+            <div class="about" id="about"><a href="#abse">About Us</a></div>
             <div class="contact"><a href="#contactus">Contact Us</a></div>
             <img src="./Data/navbar/bookmark-icon.png" alt="bookmark-icon" id="bookmark-icon"/>
             <button class="sign-in">Sign In</button>
