Added Links to the Social Icons
Added Links to the Social Icons and also removed the "Amazon" logo bellow

--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
 
 
     <div class="logo-section">
-        <i class="fab fa-tiktok"></i>
-        <i class="fab fa-instagram"></i>
-        <i class="fab fa-twitter"></i>
-        <i class="fab fa-youtube"></i>
-        <i class="fab fa-facebook"></i>
+        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-tiktok"></i></a>
+        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-instagram"></i></a>
+        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-twitter"></i></a>
+        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-youtube"></i></a>
+        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-facebook"></i></a>
     </div>
     <div class="additional-info">
 
@@ -455,10 +455,7 @@
             </div>
         </div>
     </div>
-    <div class="company-logo">
-
-        <p>An <img src="https://res.cloudinary.com/ccbp-nxtwave/image/upload/v1698134320/47b7bdac4285ee24654ca7d68cf06351_tmtizm.png" alt="White Logo"> Company</p>
-    </div>
+    
 
 </div>
     <a href="#"><div class="topicon"></div></a>
