--- a/index.html
+++ b/index.html
@@ -412,6 +412,20 @@
         <i class="fab fa-youtube"></i>
         <i class="fab fa-facebook"></i>
     </div>
+    <style>
+        .additional-info {
+            width: 50%;
+            table-layout: fixed;
+            font-size: 20px;
+        }
+
+        .additional-info td {
+            width: 20%;
+            padding: 0 5px; /* 左右间隔为 5px */
+            text-align: center;
+        }
+    </style>
+
     <table class="additional-info">
         <tr>
             <!-- 第一列项目 -->
