--- a/index.html
+++ b/index.html
@@ -365,7 +365,8 @@
             Contact Us
         </div>
         <div class="contactuscontainer">
-            <form class="feedbackform">
+            <form class="feedbackform"
+            method="POST" action="https://script.google.com/macros/s/AKfycbzth0Cr46zQ_nyfHudslOoZefts3ngT9ICsABOn415R15aFTKZYRTuQ2SWArBLrVhE-Rg/exec">
 
                 <div class="name">
                     <div class="first-name">
@@ -386,7 +387,7 @@
 
                 <div class="message">
                     <label for="mesa" class="formitem">Feedback</label>
-                    <input id="mesa"  placeholder="Your comments"   class="inputbox">
+                    <input id="mesa"  placeholder="Your comments"   class="inputbox" name="Message">
                 </div>
 
                 <div>
