--- a/index.html
+++ b/index.html
@@ -365,8 +365,7 @@
         Contact Us
     </div>
     <div class="contactuscontainer">
-        <form class="feedbackform"
-              method="POST" action="https://script.google.com/macros/s/AKfycbzth0Cr46zQ_nyfHudslOoZefts3ngT9ICsABOn415R15aFTKZYRTuQ2SWArBLrVhE-Rg/exec">
+        <form class="feedbackform">
 
             <div class="name">
                 <div class="first-name">
@@ -387,7 +386,7 @@
 
             <div class="message">
                 <label for="mesa" class="formitem">Feedback</label>
-                <input id="mesa"  placeholder="Your comments"   class="inputbox" name="Message">
+                <input id="mesa"  placeholder="Your comments"   class="inputbox">
             </div>
 
             <div>
@@ -407,11 +406,11 @@
 
 
     <div class="logo-section">
-        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-tiktok"></i></a>
-        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-instagram"></i></a>
-        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-twitter"></i></a>
-        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-youtube"></i></a>
-        <a href="https://github.com/Open-Source-Chandigarh/Streamix-IMDb"><i class="fab fa-facebook"></i></a>
+        <i class="fab fa-tiktok"></i>
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-youtube"></i>
+        <i class="fab fa-facebook"></i>
     </div>
     <style>
         .additional-info {
@@ -478,7 +477,10 @@
             </td>
         </tr>
     </table>
+    <div class="company-logo">
 
+        <p>An <img src="https://res.cloudinary.com/ccbp-nxtwave/image/upload/v1698134320/47b7bdac4285ee24654ca7d68cf06351_tmtizm.png" alt="White Logo"> Company</p>
+    </div>
 
 </div>
 <a href="#"><div class="topicon"></div></a>
