--- a/index.html
+++ b/index.html
@@ -412,74 +412,47 @@
         <i class="fab fa-youtube"></i>
         <i class="fab fa-facebook"></i>
     </div>
-    <style>
-        .additional-info {
-            width: 50%;
-            table-layout: fixed;
-            font-size: 20px;
-        }
-
-        .additional-info td {
-            width: 50%;
-            padding: 0 5px; /* 左右间隔为 5px */
-            text-align: center;
-        }
-    </style>
-
-    <table class="additional-info">
-        <tr>
-            <!-- 第一列项目 -->
-            <td class="item">
+    <div class="additional-info">
+        <div class="row">
+            <div class="item">
                 <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Get the IMDb App
-            </td>
-            <td class="item">
-                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Press Room
-            </td>
-        </tr>
-        <tr>
-            <td class="item">
+            </div>
+            <div class="item">
                 <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Help
-            </td>
-            <td class="item">
-                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Advertising
-            </td>
-        </tr>
-        <tr>
-            <td class="item">
+            </div>
+            <div class="item">
                 <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Site Index
-            </td>
-            <td class="item">
-                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Jobs
-            </td>
-        </tr>
-        <tr>
-            <td class="item">
+            </div>
+            <div class="item">
                 <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> IMDbPro
-            </td>
-            <td class="item">
-                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Conditions of Use
-            </td>
-        </tr>
-        <tr>
-            <td class="item">
+            </div>
+            <div class="item">
                 <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Box Office Mojo
-            </td>
-            <td class="item">
-                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Privacy
-            </td>
-        </tr>
-        <tr>
-            <td class="item">
+            </div>
+            <div class="item">
                 <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> IMDb Development
-            </td>
-            <td class="item">
+            </div>
+        </div>
+        <div class="row">
+            <div class="item">
+                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Press Room
+            </div>
+            <div class="item">
+                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Advertising
+            </div>
+            <div class="item">
+                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Jobs
+            </div>
+            <div class="item">
+                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Conditions of Use
+            </div>
+            <div class="item">
+                <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Privacy
+            </div>
+            <div class="item">
                 <i class="fa-solid fa-arrow-up-right-from-square arrow-icon"></i> Your Ads Privacy Choices
-            </td>
-        </tr>
-    </table>
-    <div class="company-logo">
-
-        <p>An <img src="https://res.cloudinary.com/ccbp-nxtwave/image/upload/v1698134320/47b7bdac4285ee24654ca7d68cf06351_tmtizm.png" alt="White Logo"> Company</p>
+            </div>
+        </div>
     </div>
 
 </div>
